# xtask4

./: CMakeLists.txt
src/: bookmarks.c  bookmarks.h  config_data.c  config_loader.c  config_loader.h  csm.c  csm.h  csm_list.c  csm_list.h  csm_utils.c  csm_utils.h  idle_hook.c  idle_hook.h  main.c  nl.c  nl.h  swaper.c  swaper.h
src/ui/: icons.h  menu_bookmarks.c  menu_bookmarks.h  menu_options.c  menu_options.h  ui.c  ui.h
